--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "repository": "rsimmons/voracious",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@electron/remote": "^2.1.2",
     "diff-match-patch": "^1.0.0",
     "franc": "^4.0.0",
-    "iconv-lite": "^0.4.24",
+    "iconv-lite": "^0.6.3",
     "immutable": "^3.8.1",
     "jschardet": "^1.6.0",
     "jszip": "^3.1.5",
@@ -17,22 +19,24 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.1.2",
     "react-router-scroll-4": "^1.0.0-beta.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "5",
     "webvtt-parser": "annevk/webvtt"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "cross-env": "^5.0.5",
-    "electron": "^2.0.7",
-    "electron-builder": "^20.28.2",
+    "electron": "^30",
+    "electron-builder": "^24.13.3",
     "electron-rebuild": "^1.6.0",
     "png2icons": "^1.0.1"
   },
   "homepage": ".",
   "main": "src/electron-starter.js",
   "scripts": {
-    "react-start": "cross-env BROWSER=none react-scripts start",
+    "react-start": "cross-env BROWSER=none react-scripts --openssl-legacy-provider start",
+    "craco-start": "BROWSER=none craco start",
     "react-build": "react-scripts build",
-    "electron-start": "cross-env NODE_ENV=development ELECTRON_START_URL=http://localhost:3000 electron app",
+    "electron-start": "cross-env APP_DEV=true NODE_ENV=development ELECTRON_START_URL=http://localhost:3000 electron --trace-warnings app",
     "rebuild-native": "electron-rebuild --module-dir app -f",
     "build-icons": "png2icons buildResources/icon.png buildResources/icon -all",
     "dist": "electron-builder",
@@ -40,5 +44,8 @@
     "force-rebuild-pages": "git commit -m 'force rebuild of GH pages' --allow-empty && git push",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    "last 1 electron version"
+  ]
 }
